# project-talks

./: .gitignore  CHANGELOG.md  README.md
src/: Graph.hs
wordladder/: Dockerfile  README.md  docker-compose.yml  wordladder.cabal
wordladder-server/: LICENSE  README.md  wordladder.cabal
wordladder-server/app/: Main.hs
wordladder/app/: Main.hs
wordladder/src/: Example.hs  Graph.hs  words.txt
wordladder/test/: Spec.hs
