cabal-version:   3.0
name:            wordladder
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      grantsbfi@gmail.com
author:          nordiCode.github.io
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Graph

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.0.0

executable wordladder
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aeson,
        base ^>=4.17.0.0,
        scotty,
        wordladder

test-suite wordladder-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.0.0,
        wordladder
