cabal-version:   3.0
name:            wordladder
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      grantsbfi@gmail.com
author:          nordiCode.github.io
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Graph

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.16.0.0

executable wordladder
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aeson,
        base ^>=4.16.0.0,
        scotty,
        wordladder
  

test-suite wordladder-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test, src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.16.0.0,
        hspec ^>=2.11.7,
        QuickCheck ^>=2.14.2,
        wordladder
    other-modules:
        Graph
